# LabCodes

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
data/resonator_s21/: lp11, 2.20e5 1.86e5.feather  lp127, 5.11e6 5.70e4.feather  zz1, 1.6e5 1e4.feather
examples/: Q_of_LC_CCoupled.ipynb  Q_of_LC_MCoupled.ipynb  Q_of_parallel_rlc.ipynb  Q_of_series_rlc.ipynb  fit_resonator.ipynb  fitter_basic.ipynb  state_discrimination.ipynb  tomo.ipynb
examples/data/resonator_s21/: jj5, 4.62e4 1.99e3.feather
examples/fileio/: LogFile, DataDirectory.ipynb
labcodes/: __init__.py  calc.py  calculators.py  crosstalk.py  enr_cross.py  fileio.py  fit_resonator.py  fitter.py  misc.py  models.py  peak_find.py  plotter.py  state_disc.py  tomo.py
labcodes/app/: mat_editor.py
labcodes/calc/: __init__.py  base.py  qubits.py
labcodes/fileio/: __init__.py  base.py  data_logger.py  labber.py  labrad.py  ltspice.py  misc.py
labcodes/frog/: __init__.py  benchmark.py  labrad_timefunc2freq.py  pulse_calc.py  pyle_tomo.py  routine.py  ss_tomo.py  tele.py  tele_gate.py  tele_state.py  tele_swep.py
labcodes/plotter/: __init__.py  mat3d.py  matrix.py  misc.py  plot2d.py  state_dis.py  tomo.py
labcodes/routine/: __init__.py  basic.py  state_disc.py
notebooks/: pfind_test.py  rt_qst_qpt.py
notebooks/data/: 00003 - power shift.csv
src/labcodes/: state_disc.py  tomo.py
src/labcodes/fileio/: __init__.py  data_logger.py  labrad.py  logqbit.py
tests/: test_fileio_base.py  test_fileio_labrad.py  test_fit_resonator.py  test_state_disc.py  test_tomo.py  try_fileio_logqbit.py
tests/data/: 00003 - power shift.ini  fit_resonator.feather
tests/test_fileio/: test_base.py
