[project]
name = "labcodes"
version = "1.0.3"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "lmfit>=0.9.5",
    "tqdm",
    "attrs",
    "json-numpy",
    "cvxpy", # for tomography.
    "scikit-learn", # for state_disc.
    "duckdb>=1.4.0",
    "json-tricks>=3.17.3",
    "typing-extensions>=4.15.0",
    "pyarrow>=21.0.0",
]
requires-python = ">=3.10"
authors = [{ name = "Qiujv", email = "qiujv@outlook.com" }]
description = "Simple routines for superconducting quantum circuits."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    # "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Qiujv/LabCodes"

[project.optional-dependencies]
fileio = ["h5py>=2.6", "dpath"]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
